# RealWorldOCaml-Scratchpad

./: README.md  dune-project
lists_and_patterns/: dune-project
lists_and_patterns/lib/: dune
lists_and_patterns/test/: dune
variables_and_functions/lib/: dune
variables_and_functions/test/: dune
